src/main/java/com/example/bakalarska_prace_app/errors/Error.java
package com.example.bakalarska_prace_app.errors;

public interface Error {
}
